@startuml

title __OBJECTS's Class Diagram__\n

  namespace  {
    namespace bjects {
      class components.Camera {
          - FOV : float
          - aspectRatio : float
          - height : float
          - pixelHeight : float
          - pixelWidth : float
          - planeHeight : float
          - planeWidth : float
          - scale : float
          - width : float
          + Camera()
          + getAspectRatio()
          + getFOV()
          + getFocusPoint()
          + getPosition()
          + getScale()
          + pixelCenterCoordinate()
          + setAspectRatio()
          + setFOV()
          + setFocusPoint()
          + setPosition()
          + setScale()
          ~ init()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class objects.ComplexObject {
          - Tintersectzion : float
          + ComplexObject()
          + getIntensity()
          + intersect()
          + normal()
          + shadeCookTorrance()
          + shadeDiffuse()
          + shadowCheck()
          + transform()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      enum Operation {
        DIFFERENZ
        SCHNITT
        VEREINIGUNG
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class objects.Ellipsoid {
          + Ellipsoid()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class objects.EllipticalCylinder {
          + EllipticalCylinder()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class components.Light {
          - intensity : float
          + Light()
          + getColor()
          + getIntensity()
          + getPosition()
          + getVolume()
          + setColor()
          + setIntensity()
          + setPosition()
          + setVolume()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class objects.PlaneObject {
          + PlaneObject()
          + getIntensity()
          + getPlaneNormal()
          + getPointOnPlane()
          + intersect()
          + setPlaneNormal()
          + setPointOnPlane()
          + shadeCookTorrance()
          + shadeDiffuse()
          + shadowCheck()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class objects.Quadrik {
          - a : double
          - b : double
          - c : double
          - d : double
          - e : double
          - f : double
          - g : double
          - h : double
          - j : double
          - k : double
          + Quadrik()
          + getIntensity()
          + getMatrix()
          + intersect()
          + intersectBody()
          + isInside()
          + normal()
          + q()
          + setConstantsFromMatrix()
          + setMatrix()
          + shadeCookTorrance()
          + shadeDiffuse()
          + shadeDiffuseV()
          + shadowCheck()
          + transform()
          - setMatrixFromConstants()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class objects.Ray {
          - t0 : float
          - t1 : float
          + Ray()
          + Ray()
          + getDirection()
          + getNearest()
          + getOrigin()
          + getPoint()
          + getT0()
          + getT1()
          + setDirection()
          + setNearest()
          + setOrigin()
          + setT0()
          + setT1()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      abstract class objects.SceneObject {
          - animators : ArrayList<Animator>
          - isGizmo : boolean
          - shade : boolean
          + getAnimators()
          + getMaterial()
          + getNormal()
          + getScene()
          {abstract} + intersect()
          + isGizmo()
          + isShade()
          + setAnimator()
          + setGizmo()
          + setMaterial()
          + setNormal()
          + setScene()
          + setShade()
          {abstract} + shadeCookTorrance()
          {abstract} + shadeDiffuse()
          {abstract} + shadowCheck()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class components.Scene {
          - bgCol : Color
          - sceneLights : ArrayList<Light>
          - sceneObjects : ArrayList<SceneObject>
          + SceneSimple()
          + getBgCol()
          + getSceneCam()
          + getSceneLight()
          + getSceneObjects()
          + setBgCol()
          + setSceneCam()
          + setSceneLight()
          + setSceneObjects()
      }
    }
  }
  

  namespace  {
    namespace bjects {
      class objects.SphereObject {
          - radius : float
          - radiusSq : float
          + SphereObject()
          + SphereObject()
          + SphereObject()
          + getCenter()
          + getIntensity()
          + getRadius()
          + getRadiusSq()
          + intersect()
          + setCenter()
          + setRadius()
          + setRadiusSq()
          + shadeCookTorrance()
          + shadeDiffuse()
          + shadowCheck()
      }
    }
  }
  

  components.Camera o-- math.Vector3 : focusPoint
  components.Camera o-- math.Vector3 : pixelCenterCoordinate
  components.Camera o-- math.Vector3 : planeBottomLeft
  components.Camera o-- math.Vector3 : planeCenter
  components.Camera o-- math.Vector3 : position
  components.Camera o-- math.Vector3 : rotatedUpVector
  components.Camera o-- math.Vector3 : uVec
  components.Camera o-- math.Vector3 : vVec
  components.Camera o-- math.Vector3 : viewDir
  objects.ComplexObject -up-|> objects.SceneObject
  objects.ComplexObject o-- objects.Quadrik : intersectObj
  objects.ComplexObject o-- math.Vector3 : normal
  objects.ComplexObject o-- objects.Quadrik : quadA
  objects.ComplexObject o-- objects.Quadrik : quadB
  objects.ComplexObject o-- objects.ComplexObject.Operation : operation
  objects.ComplexObject +-down- objects.ComplexObject.Operation
  objects.Ellipsoid -up-|> objects.Quadrik
  objects.Ellipsoid o-- math.Vector3 : initScale
  objects.EllipticalCylinder -up-|> objects.Quadrik
  components.Light o-- math.Vector3 : color
  components.Light o-- math.Vector3 : position
  components.Light o-- objects.SphereObject : volume
  objects.PlaneObject -up-|> objects.SceneObject
  objects.PlaneObject o-- math.Vector3 : planeNormal
  objects.PlaneObject o-- math.Vector3 : pointOnPlane
  objects.Quadrik -up-|> objects.SceneObject
  objects.Quadrik o-- math.Matrix4x4 : matrix
  objects.Ray o-- math.Vector3 : intersection1
  objects.Ray o-- math.Vector3 : intersection2
  objects.Ray o-- math.Vector3 : Direction
  objects.Ray o-- math.Vector3 : Origin
  objects.Ray o-- objects.SceneObject : nearest
  objects.SceneObject o-- util.Material : material
  objects.SceneObject o-- math.Vector3 : normal
  objects.SceneObject o-- components.Scene : scene
  components.Scene o-- components.Camera : sceneCam
  objects.SphereObject -up-|> objects.SceneObject
  objects.SphereObject o-- math.Vector3 : center


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
